dev/nlb-ingress-deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - anthonycornell.com
      secretName: tls-secret
  rules:
    - http:
        paths:
          - path: /foaas
            backend:
              serviceName: foaas-service
              servicePort: 5000
          - path: /jenkins
            backend:
              serviceName: jenkins-service
              servicePort: 8080
          - path: /grafana
            backend:
              serviceName: grafana-service
              servicePort: 3000
          - path: /prometheus
            backend:
              serviceName: prometheus-service
              servicePort: 9090
